force-app/main/default/objects/Account/fields/acc_id__c.field-meta.xml
<CustomField>
    <fullName>acc_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>acc id</label>
    <type>Text</type>
</CustomField>