force-app/main/default/objects/Account/fields/Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue__c</fullName>
    <label>Opportunity Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>