force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
            <value>
                <fullName>test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>