force-app/main/default/objects/Account/fields/test_check__c.field-meta.xml
<CustomField>
    <fullName>test_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test check</label>
    <type>Checkbox</type>
</CustomField>