force-app/main/default/objects/Account/fields/test_text__c.field-meta.xml
<CustomField>
    <fullName>test_text__c</fullName>
    <label>test text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>