force-app/main/default/objects/Account/recordTypes/ABC.recordType-meta.xml
<RecordType>
    <fullName>ABC</fullName>
    <active>true</active>
    <label>ABC</label>
</RecordType>