force-app/main/default/objects/Account/recordTypes/account_active.recordType-meta.xml
<RecordType>
    <fullName>account_active</fullName>
    <active>true</active>
    <label>account_active</label>
</RecordType>