force-app/main/default/objects/Account/recordTypes/efg.recordType-meta.xml
<RecordType>
    <fullName>efg</fullName>
    <active>true</active>
    <label>efg</label>
</RecordType>