force-app/main/default/objects/Account/validationRules/admin_can_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>admin_can_edit</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
AND(ISCHANGED(test__c),  $User.FirstName =&apos;xyz&apos;)
,False,True)</errorConditionFormula>
    <errorDisplayField>test__c</errorDisplayField>
    <errorMessage>Only admin can edit</errorMessage>
</ValidationRule>