force-app/main/default/objects/Account/validationRules/adminedit.validationRule-meta.xml
<ValidationRule>
    <fullName>adminedit</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
      AND(LOWER(TEXT(test__c))=&apos;test&apos;, $Profile.Name =&apos;System Administrator&apos; &amp;&amp;  $Permission.test1 =False) ,False,True 

   )</errorConditionFormula>
    <errorMessage>only admin can edit whrn test = test</errorMessage>
</ValidationRule>