force-app/main/default/objects/Account/validationRules/val1.validationRule-meta.xml
<ValidationRule>
    <fullName>val1</fullName>
    <active>false</active>
    <errorConditionFormula>Name != &apos;Sabyasachi%&apos;</errorConditionFormula>
    <errorMessage>account name should start with sabya</errorMessage>
</ValidationRule>